--- a/fly.toml
+++ b/fly.toml
@@ -2,7 +2,7 @@ app = "p-659806"
 primary_region = "cdg"
 
 [build]
-dockerfile = "Dockerfile"
+image = "Dockerfile"
 
 [env]
 PORT = "8080"  # or "8000" if that’s what you’re using in Dockerfile
